# tiny-language-compiler

./: .gitignore  README.md
docs/: .~lock.compilers-principles-techniques-and-tools.pdf#  a00002.js  a00005_source.html  a00011.js  a00011_source.html  a00014_source.html  a00026_source.html  a00035_source.html  a00038_source.html  a00867.html  a00875.html  a00876.html  a00879.html  a00879.js  classes.html  dir_4981ca229c52b8c8b8b731d6c20e53c6.html  dir_4981ca229c52b8c8b8b731d6c20e53c6.js  dir_7eea78ddce5a6afe1188f0b9552b7e48.html  dir_7eea78ddce5a6afe1188f0b9552b7e48.js  dir_99d24cff1b7b7a5458f9f838e2addd69.html  dir_bf17488d7e2d01a271910de4d3133f27.html  functions_func.html  functions_vars.html
docs/html/: a00002.html  a00020.html  a00023.html  a00863.html  a00871.html  a00872.html  annotated_dup.js  dir_0ace59c369974b9e9af2d402d0a9205b.html  dir_201330c959b52837d4da02a7e5458a0f.js  dir_21050eab8d89c3a51dda2dd9ab15a33e.js  dir_6774b76becf5c1eba00b38f86dafd5a0.html  dir_79670cabb0522eebbef108d050a504b8.js  dir_872d2b0191c389e9506368960fe4923e.js  dir_9383656b98e8ecb3d265332c781130bc.js  dir_bf17488d7e2d01a271910de4d3133f27.js  dir_f5ceeaa47982c373ad2afa71dfc080d6.html  functions.html  menudata.js  navtreedata.js
docs/search/: all_0.js  all_2.js  all_a.js  enumvalues_0.js  enumvalues_3.js  enumvalues_7.js  enumvalues_8.js  functions_0.js  functions_2.js  functions_5.js  functions_7.js  pages_2.js  variables_2.js  variables_5.js
parser/: .editorconfig  .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile  README.md  main.cpp
parser/include/: parser.hpp  parsing_table.hpp  stack.hpp  token.hpp
parser/src/: main.cpp  parser.cpp  parsing_table.cpp  stack.cpp
parser_gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc
parser_gui/Data/include/: Node.h  ParseTree.h  Token.h
parser_gui/Data/src/: Node.cpp  ParseTree.cpp  Token.cpp
parser_gui/FileHandling/include/: FileHandler.h
parser_gui/Parser/include/: Parser.h
parser_gui/Parser/src/: Parser.cpp
parser_gui/Scanner/include/: Scanner.h  TokenStreamBuilder.h
parser_gui/Scanner/src/: Scanner.cpp  TokenStreamBuilder.cpp
parser_gui/Widgets/include/: TabContent.h  TabWidget.h  TextEditor.h  ToolBar.h  TreeVisualiser.h
parser_gui/Widgets/src/: TabContent.cpp  TabWidget.cpp  TextEditor.cpp  ToolBar.cpp  TreeVisualiser.cpp
scanner/: .editorconfig  .gitignore  Makefile  README.md  build.bat  pwm.c  pwm.h  run_tests
scanner/examples/: example1.txt  example2.txt  example3.txt  example4.txt  example5.txt
scanner/html/: a00002_source.html  a00005.html  a00005.js  a00008.js  a00008_source.html  a00011.html  (+22 more)
(+104 files in other folders)
